@@ -4,15 +4,17 @@ Hash: SHA256
 DIST rpy2-2.3.10.tar.gz 187420 SHA256 728326d6d13107f7156f1f3d6ad3a7d6a19ae4d6801e56708e794196d5b0a509 SHA512 58013019bb71c28b0c890a599687628d94fc0a59f7071177618d8494eca485eb08ae9f7d27cf529fe973b01254c00373130b68c8ce863b69f8dcfa54bd5bf9f8 WHIRLPOOL bf8e8c19b75622eb5c923496d0ae1625f3196d3e760fbf60558f692847f0a35a3a1f2112951cb48fa5c9c111fdc145e0babe99f489aa29033b9e21edf0b6180e
 DIST rpy2-2.4.0.tar.gz 160914 SHA256 3cb6360d4d0af7996979f50d0347f5f74fc3fcf98e3ee8057c4c886b358d17e1 SHA512 cd6432ba2f5c4f0e8e0a49e473efd917cfd279f435dc4fa31e417a725085937126ea2435f43f2a9fdd01f2d4f53698f1684375885525fba095ad657e7890facf WHIRLPOOL f67c5ddb7fd3576bf3cc143d6be4b803e49f3b56154c2ad7689a0c90511e7d037b370fa76b64a7d8b72dd49b5850c96382bdd3f67b0145afd68959a8112150b0
 DIST rpy2-2.4.2.tar.gz 161135 SHA256 c88f961e6ea8bbb24dbffab6738a0bc090ca8597ae8292731ae3362e64c839c8 SHA512 e939504d8907772d203e9f999cb31951e4803e125ada8cc1c8103185ec9bbb8a1aa65324aa843f0bfa6686b2a76be66b536d04ee992e18fa1bd3db85970e09e9 WHIRLPOOL 831d5d9ca2b54622731b3d0d65b34f21d3f275c7686060a24b5bf2121e191e11dad264327f6132cba6d634e35851f22d51ace62912233e520080659ca4fb7ef9
+DIST rpy2-2.4.3.tar.gz 159655 SHA256 1d7970d1723d52c4bbd510ee88c0a6b8273a3bba8a05c124fb8be35d75616906 SHA512 03920dd045cccd58f5254035fcb1b49c2eb8fdf046281ecbbe687ac273f2b304fa9c574d9f247830dedec35f5bd18a22cc11cf18790e029e3942878442a1e874 WHIRLPOOL bf1f238228c399f3cb3554805ff3d734733f9d740f82e2e67366118285e29d1a8bc91a7d37a149dc6776a8a7adf14f0be59abcd928e0d25646e354c078a8cfcc
 EBUILD rpy-2.3.10.ebuild 905 SHA256 eca2695fb63dbc9256d93790f17bb931a9f5ddaf7191d8fca20b90df45166e76 SHA512 48b3ffdce6a5f1e0042efed7113d01a770a0737150a14eb4542a7e6970c7f92f721de23308397ea93ede29c03764c04b8442e9de86dd74c623d6047e6d81e54d WHIRLPOOL 28bc101647d94994c9c823ef20ba14e0ef8bc89bb349c976c6129779e13e571d79388af53b76c2c198570450513ba4a72a208300a044b572dfd87eda3a30879c
 EBUILD rpy-2.4.0.ebuild 907 SHA256 4ce83df4379f67c50903fb6a5dad43a38e165b8e6608060bdd59d8d44009c612 SHA512 c470931ac4e5b6c790b5a7ea294a66855547d486c207de239ee569f4f5613e531d936da431d193702e755616e8301e581f00432c951c03bbd38ac167e8a401e0 WHIRLPOOL 0afb16045746feb1db6f546c860596fe1df030714a49c313f7106131df066a7e3d87169eb5bb638dbfec22fde53be4ec546331e8c8e1927bc27f4b8111188e79
 EBUILD rpy-2.4.2.ebuild 1112 SHA256 c050da1988403bde35c8bc283b5f0f21c6728ae7d644b5672223a8db41006759 SHA512 42cb811ea2780b62d5964e1f4a288ef3e6ef1526064048922a80cee8376d7b29ca0f25886ebc2714bf5f51c626e11cdf5c95de0be939b086259646afe9face4c WHIRLPOOL 45c5ae9b1657505b1e56f6a2fc5323b6d9de6e3b619aef0769031c15a8bbf6e270cd216fe6f489510ce8fc0fe6742d388b041f167570d57de3681f873bb0008e
-MISC ChangeLog 12108 SHA256 788aee3285f72baa53c06532626079860b66bda9d28963291e69f8bdea4aec97 SHA512 776c65972987843b5ad59d7616b1687ef22830e59d34c7e293f2d58b39aa72c8762a53f791cb21853abbf743154fe930f9d86b9c8e8b235789e9fd475281e718 WHIRLPOOL 95b69a32a21f167123903f72cbac6929496b56d663584fd7129a3e142df2a735b7e7503aaad2fa78a3bbc44250400ee5e12f93cddbb1722e642094a3317fd4e1
+EBUILD rpy-2.4.3.ebuild 1164 SHA256 b7d897dda68af67c5f8f0426f65e706fbbab7f658ba5cdc55d40e575961ace80 SHA512 79232dcc9aad3764f5939eb02d840b6349df44879e7f583692a611cdc8c87436c870a3c97b69ba5f8145d3a8a008e99a35c3e41a87ffd190a027cd9d0ca01bfc WHIRLPOOL a7ba09b0052aff4d08670a296744f5a11a661ba9107e1173b9edd6080665ab11a9e15afe04f605064f85bd539b272d442c071b97f8501667d598e44ce32ca3a9
+MISC ChangeLog 12209 SHA256 13bfdc3cb58f87e246b36d5e7ce18c10fe0893f298026c25a8765fc1467e89aa SHA512 14e900f5bf334f8da8a636532cfbc586df00f3cde8fc96dacf5368a071fc8c5b8e8490bf8ef559f43e224665d6d1c10eb4589927ebc15136e19e8bdb8f06477e WHIRLPOOL 3a78e0f3b642dafcf7d9a2d1eb643717a169303bc28ec6b4f6cff763a6c76d922f0aceee24a18f61247a37ce24ddac39eb8a1ba03783d7e53c6192bd308fbe7d
 MISC metadata.xml 512 SHA256 03c293717594aa787019e8716891d2eea067135a4e77d7f0a53317979087e695 SHA512 c25e12c24dd9cd06122e64975fb9760cd50dfda61f0fe808e780c466fd1b105bdba09cdebd0d4d0f529570c2cc6fac3334296bdf12208a8ff74535552af63e4d WHIRLPOOL 52b27f13223e5e1e9805913369a69ee947a295ba109e29e0c2a53b4b183c1580d56b34f83c8b96de91693d228f117d36a3b6e79bb3c02501cefea1d801d4a17a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlOo2WkACgkQso7CE7gHKw0XOQCcCOTafkKMF2JOvkS3RG5t4RMM
-ixwAoMztlmMDL/yJPknd879obHr4d99+
-=sfG7
+iEYEAREIAAYFAlP0b5kACgkQso7CE7gHKw25OwCfVuyr+bklbKwrHsQ+JPpFtsTb
+aasAn3tt7RcMK1KfuP9Q+EqUB3msL8ev
+=Idad
 -----END PGP SIGNATURE-----
