@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/rpy
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/rpy/ChangeLog,v 1.80 2014/06/24 01:58:44 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/rpy/ChangeLog,v 1.81 2014/08/20 10:00:16 idella4 Exp $
+
+*rpy-2.4.3 (20 Aug 2014)
+
+  20 Aug 2014; Ian Delaney <idella4@gentoo.org> +rpy-2.4.3.ebuild:
+  bump
 
 *rpy-2.4.2 (24 Jun 2014)
 
